--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,8 +15,11 @@
     "start": "npm run build && npm run electron-prod"
   },
   "dependencies": {
+    "googleapis": "^166.0.0",
+    "open": "^7.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "slugify": "^1.6.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
