--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ data/*.xlsx
 
 # Dashboard
 dashboard/node_modules/
+dashboard/backend/data/
+dashboard/build/
 dashboard/dist/
 dashboard/.vite/
 
@@ -32,3 +34,6 @@ Thumbs.db
 
 # Logs
 *.log
+client_secret_845309111706-bfiffmltmn80g3cka5amhgdn6li26sae.apps.googleusercontent.com.json
+.env
+.env.local
