--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,6 +15,7 @@
     "start": "npm run build && npm run electron-prod"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "googleapis": "^166.0.0",
     "lucide-react": "^0.554.0",
