--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,8 +15,15 @@
     "start": "npm run build && npm run electron-prod"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
+    "googleapis": "^166.0.0",
+    "lucide-react": "^0.554.0",
+    "open": "^7.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.6",
+    "slugify": "^1.6.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
