First working Camps Grid

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,6 @@ Thumbs.db
 
 # Logs
 *.log
-client_secret_845309111706-bfiffmltmn80g3cka5amhgdn6li26sae.apps.googleusercontent.com.json
+client_secret.json
 .env
 .env.local
